--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "del": "^3.0.0",
     "gulp": "^4",
     "gulp-front-matter": "^1.3.0",
+    "gulp-merge-json": "^1.3.1",
     "gulp-notify": "^3.2.0",
     "gulp-nunjucks-render": "^2.2.2",
     "gulp-plumber": "^1.2.0",
